# parkour-game

./: pyproject.toml
src/: obstacles.py  ui.py  utils.py
